Bug 306902 - Dialog for WPA passwords is too small
Summary: Dialog for WPA passwords is too small
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2012-09-16 22:51 UTC by David Edmundson
Modified: 2012-09-16 23:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-09-16 22:51:39 UTC
When prompted that the password for a wireless network is wrong the layout is wrong and the input box is cut off on the right hand side.

Note there is a review on this already, just opening a bug to close it again to keep a paper trail for release notes etc.
Comment 1 Lamarque V. Souza 2012-09-16 23:20:31 UTC
Git commit aa4705107cc154189318169cd113cc6b6b26ad3c by Lamarque V. Souza, on behalf of David Edmundson.
Committed on 13/09/2012 at 00:55.
Pushed by lvsouza into branch 'nm09'.

Fix a bug in which the wireless password prompt dialog would be shown at an incorrect size
REVIEW: 106437
(cherry picked from commit 5ad8668dcba714fff7799ab48b00706709b0dd8f)

M  +4    -2    libs/ui/security/wirelesssecurityauth.cpp

http://commits.kde.org/networkmanagement/aa4705107cc154189318169cd113cc6b6b26ad3c