Fix a bug in which the wireless password prompt dialog would be shown at an incorrect size

BUG:306902
REVIEW: 106437